--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.260",
